--- a/index.html
+++ b/index.html
@@ -20,7 +20,13 @@ https://cdn.jsdelivr.net/npm/bezier-easing@2.1.0/dist/bezier-easing.min.js
     <div class="bottom"></div>
     <div class="left"></div>
     <button class="open">open</button>
-    <div class="content"></div>
+    <div class="content">
+      <h2>DCODELAB</h2>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt in sint dicta deserunt cumque quibusdam ex
+        placeat fuga quos, soluta unde repellendus porro voluptates eaque ad voluptatibus sapiente ullam autem.</p>
+
+      <button class="close">close</button>
+    </div>
   </main>
 </body>
 
